# hwlt_pico2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pr_build_check.yml
src/common/: MemoryPool.cpp  MemoryPool.hpp  Messages.hpp  SPSCQueue.hpp
src/communication/: CommandParser.cpp  USBManager.cpp
src/modules/: IModule.hpp
src/system/: SystemManager.cpp
